@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sirilpy"
-version = "0.6.50"
+version = "0.6.56"
 authors = [
   { name = "Team free-astro" },
 ]
