@@ -16,6 +16,7 @@ xx/xx/25
 * Removed legacy GraXpert interface to be replaced by the new GraXpert-AI.py script (#1620, #1611, #1573)
 * Allow saving plots to files using sirilpy.connection.SirilInterface.xy_plot() (#1670)
 * Filechoosers in the calibration tab and calibration preferences remember the last directory (#1664)
+* Updated overlay_add_polygon() to use shared memory, to handle polygons with large numbers of sides
 
 siril 1.4.0-beta2
 05/21/25
